// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineElement in development should render a warning 1`] = `
<span
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Unknown inline node type
</span>
`;

exports[`InlineElement in development should render a warning and the children 1`] = `
Array [
  <span
    style={
      Object {
        "backgroundColor": "red",
        "color": "white",
      }
    }
  >
    Unknown inline node type
  </span>,
  <p>
    Foo
  </p>,
]
`;

exports[`InlineElement in production should render null 1`] = `null`;

exports[`InlineElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
